--- a/etiquetas_kotlin/app/src/main/AndroidManifest.xml
+++ b/etiquetas_kotlin/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.sc703.proyecto" >
+    package="com.sc703.etiquetas_kotlin">
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.CALL_PHONE" />
@@ -11,19 +11,13 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.Proyecto" >
+        android:theme="@style/Theme.Etiquetas_kotlin">
+        <activity android:name=".ui.RegistrarUsuarios"></activity>
         <activity
             android:name=".ActivityPrincipal"
             android:label="@string/title_activity_principal"
-            android:theme="@style/Theme.Proyecto.NoActionBar" >
-        </activity>
-        <activity
-            android:name=".ui.ActivityPrincipal"
-            android:label="@string/title_activity_principal"
-            android:theme="@style/Theme.Proyecto.NoActionBar" >
-        </activity>
-        <activity android:name=".RegistrarUsuario" />
-        <activity android:name=".MainActivity" >
+            android:theme="@style/Theme.Etiquetas_kotlin.NoActionBar" />
+        <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
