--- a/etiquetas_kotlin/app/src/main/AndroidManifest.xml
+++ b/etiquetas_kotlin/app/src/main/AndroidManifest.xml
@@ -12,12 +12,14 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Etiquetas_kotlin">
-        <activity android:name=".ui.RegistrarUsuarios"></activity>
+        <activity android:name=".RecuperarPassActivity"></activity>
+        <activity android:name=".MainActivity" />
+        <activity android:name=".ui.RegistrarUsuarios" />
         <activity
             android:name=".ActivityPrincipal"
             android:label="@string/title_activity_principal"
             android:theme="@style/Theme.Etiquetas_kotlin.NoActionBar" />
-        <activity android:name=".MainActivity">
+        <activity android:name=".LoginActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
