arreglitos en contacto y salir

--- a/etiquetas_kotlin/app/src/main/AndroidManifest.xml
+++ b/etiquetas_kotlin/app/src/main/AndroidManifest.xml
@@ -12,7 +12,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Etiquetas_kotlin">
-        <activity android:name=".ui.salir.SalirActivity"></activity>
+        <!--Esto esta dando error, SalirActivity no existe, no sé si alguno lo dejó con algún propósito-->
+        <!--<activity android:name=".ui.salir.SalirActivity"></activity>-->
         <activity android:name=".RegistrarActivity" />
         <activity android:name=".RecuperarPassActivity" />
         <activity android:name=".MainActivity" />
