--- a/etiquetas_kotlin/app/build.gradle
+++ b/etiquetas_kotlin/app/build.gradle
@@ -59,6 +59,7 @@ dependencies {
    implementation 'com.google.firebase:firebase-auth-ktx:21.0.1'
     implementation 'com.google.firebase:firebase-database-ktx:20.0.0'
     implementation 'com.google.firebase:firebase-storage-ktx:20.0.0'
+    implementation 'com.google.firebase:firebase-firestore-ktx:23.0.2'
 
     //Dependencia de RecyclerView
   implementation 'androidx.recyclerview:recyclerview:1.2.1'
